# chatherine

./: 404.html  README.md  Session.vim  index.html  index.txt  next.config.ts  package-lock.json  package.json
.github/workflows/: ci-cd.yml  deploy.yml
_next/static/chunks/: 215-59176242b8b7478a.js  255-e35cc0226f4f908d.js  9-4b243165ecbdb23f.js  main-974e82d6183f6b76.js  webpack-87b4655285e00d81.js  webpack-c2414bcbfa60e18d.js
app/: layout.tsx
backend/: .env  .env.example  README.md  customers.db  example.py  main.py  populate_db.py  populate_restaurant.py  pyproject.toml  requirements.txt  tooltest.py
bot/: .env.example  IMPLEMENTATION_SUMMARY.md  README.md  demo.sh  package-lock.json  package.json  server.js  telegram-server.js
bot/data/: mockData.js
bot/middleware/: auth.js
bot/public/: app.js  index.html  styles.css
bot/routes/: analytics.js  auth.js  business.js  dashboard.js  settings.js  telegram.js  whatsapp.js
chatui/: app.js  index.html
components/: BankingScaleHero.tsx  CaseStudiesCarousel.tsx  FAQSection.tsx  Footer.tsx  IntegrationCarousel.tsx  PortfolioNavbar.tsx  PricingSection.tsx  ProductTeaserCard.tsx
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/lib/: api.ts  (+1 more)
mobile/: .env.example  App.tsx  metro.config.js  package-lock.json  package.json  tailwind.config.js
mobile/chatherine/: .env  README.md  app.json  global.css  package-lock.json  package.json  tailwind.config.js
mobile/chathy/: README.md  app.json  global.css  package-lock.json  package.json
(+68 files in other folders)
