[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "pydantic==2.5.0",
    "langchain",
    "langchain-google-genai",
    "google-generativeai",
    "sqlalchemy",
    "aiosqlite",
    "python-dotenv",
]
